--- a/client/src/components/common/auth/login/Login.css
+++ b/client/src/components/common/auth/login/Login.css
@@ -1,4 +1,4 @@
-.login{
+/* .login{
     width: 100%;
     padding-top: 120px;
     padding-bottom: 60px;
@@ -70,6 +70,154 @@
 .eye{
   position: absolute;
   top: 50%;
+  transform: translateY(-50%);
+  right: 10px;
+  cursor: pointer;
+  color: #4b4949;
+}
+
+.login-button{
+    width: 100%;
+}
+.login-btn{
+    width: 100%;
+    padding: 8px 16px;
+    color: #f8f8ff;
+    background-color: #121212;
+    border: 2px solid #121212;
+    border-radius: 8px;
+    font-size: 16px;
+   font-family: "Roboto", sans-serif;
+   font-weight: 400;
+}
+.login-btn:hover{
+    color: #121212;
+    background-color: #f8f8ff;
+}
+.form p{
+    font-size: 14px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    color: rgb(78, 79, 79);
+}
+.error-message {
+    font-family: "Roboto", sans-serif;
+    color: red;
+    font-size: 12.5px;
+    padding-top: 4px;
+  }
+  
+  .email-holder.error {
+    border-color: red;
+  }
+  @media only screen and (max-width:600px){
+    .login-heading h1{
+        font-size: 24px;
+    }
+  }
+  
+  @media only screen and (max-width:500px){
+    .login-container{
+        width: 95%;
+        gap:1.5rem;
+    }
+    .form{
+        gap:1rem;
+    }
+    .Name{
+        flex-direction: column;
+        gap:1rem;
+    }
+  }
+  @media only screen and (max-width:400px){
+    .login-container{
+        margin: 16px;
+    }
+  } */
+
+  .login{
+    width: 100%;
+    padding-top: 120px;
+    padding-bottom: 60px;
+    background-color: #f8f8ff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login-container{
+    width:350px;
+    padding: 24px;
+    border: 0;
+    box-shadow: 0px 0px 5px 0px rgba(161,161,161,1);
+    border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:2.5rem;
+    margin: 32px;
+}
+.login-heading h1{ 
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 28px;
+    
+}
+.form{
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:1.5rem;
+}
+.Name{
+    width: 100%;
+    display: flex;
+    gap:1.5rem;
+
+}
+.fname-holder,.lname-holder, .email-holder ,.password-holder{
+   width: 100%;
+   height: 40px;
+   padding: 8px;
+   font-size: 16px;
+   font-family: "Roboto", sans-serif;
+   font-weight: 400;
+   border: 1px solid grey;
+   border-radius: 8px;
+   background-color: #f8f8ff; 
+}
+.Email{
+    width: 100%;
+}
+.Password{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap:1.5rem;
+}
+.password-input,.confirm-password-input{
+    display: flex;
+
+}
+.password-input{
+    flex-direction: column;
+}
+.password-input,
+.confirm-password-input {
+  position: relative;
+}
+
+.divider {
+    width: 100%;
+    height: 1px;
+    background-color: grey;
+}
+
+
+.eye{
+  position: absolute;
+  top: 22%;
   transform: translateY(-50%);
   right: 10px;
   cursor: pointer;
