--- a/client/src/components/common/auth/signup/Signup.css
+++ b/client/src/components/common/auth/signup/Signup.css
@@ -1,140 +1,4 @@
-/* .signup{
-    width: 100%;
-    padding-top: 120px;
-    padding-bottom: 60px;
-    background-color: #f8f8ff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.signup-container{
-    padding: 24px;
-    border: 0;
-    box-shadow: 0px 0px 5px 0px rgba(161,161,161,1);
-    border-radius: 16px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap:2.5rem;
-    margin: 32px;
-}
-.signup-heading h1{ 
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 28px;
-    
-}
-.form{
-    width: 95%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap:1.5rem;
-}
-.Name{
-    width: 100%;
-    display: flex;
-    gap:1rem;
-
-}
-.fname-holder,.lname-holder, .email-holder ,.password-holder{
-   width: 100%;
-   height: 40px;
-   padding: 8px;
-   font-size: 16px;
-   font-family: "Roboto", sans-serif;
-   font-weight: 400;
-   border: 1px solid grey;
-   border-radius: 8px;
-   background-color: #f8f8ff;
-}
-.Email{
-    width: 100%;
-}
-.Password{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap:1.5rem;
-}
-.password-input,.confirm-password-input{
-    display: flex;
-}
-.password-input,
-.confirm-password-input {
-  position: relative;
-}
-
-.eye{
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 10px;
-  cursor: pointer;
-  color: #4b4949;
-}
-
-.SignUp-button{
-    width: 100%;
-}
-.signup-btn{
-    width: 100%;
-    padding: 8px 16px;
-    color: #f8f8ff;
-    background-color: #121212;
-    border: 2px solid #121212;
-    border-radius: 8px;
-    font-size: 16px;
-   font-family: "Roboto", sans-serif;
-   font-weight: 400;
-}
-.signup-btn:hover{
-    color: #121212;
-    background-color: #f8f8ff;
-}
-.form p{
-    font-size: 14px;
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    color: rgb(78, 79, 79);
-}
-.error-message {
-    font-family: "Roboto", sans-serif;
-    color: red;
-    font-size: 12.5px;
-    padding-top: 4px;
-  }
-  
-  .email-holder.error {
-    border-color: red;
-  }
-  @media only screen and (max-width:600px){
-    .signup-heading h1{
-        font-size: 24px;
-    }
-  }
-  
-  @media only screen and (max-width:500px){
-    .signup-container{
-        width: 95%;
-        gap:1.5rem;
-    }
-    .form{
-        gap:1rem;
-    }
-    .Name{
-        flex-direction: column;
-        gap:1rem;
-    }
-  }
-  @media only screen and (max-width:400px){
-    .signup-container{
-        margin: 16px;
-    }
-  } */
-
-  .signup{
+.signup{
     width: 100%;
     padding-top: 120px;
     padding-bottom: 60px;
@@ -336,7 +200,6 @@
   @media only screen and (max-width: 600px) {
     .login-with-google-btn {
         padding: 10px 16px;
-        font-size: 14px;
     }
 }
 
@@ -356,3 +219,24 @@
     transform: translateY(-50%);
     cursor: pointer;
   }
+
+  .fname
+  {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+  }
+  .lname
+  {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+  }
+
+  /* .passerr
+  {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+
+  } */
