--- a/client/src/components/landing-page/LandingPage.css
+++ b/client/src/components/landing-page/LandingPage.css
@@ -1,5 +1,5 @@
 .landing-hero-section{
-    padding-top:140px;
+    padding-top:110px;
     padding-bottom: 90px;
     display: flex;
     justify-content: center;
@@ -67,7 +67,7 @@
     gap:2rem;
 }
 .landing-hero-top h1{
-    font-size: 28px;
+    font-size: 24px;
     font-family: 'Raleway', sans-serif;
     font-weight: 500;
     color: #1c1623;
@@ -105,8 +105,11 @@
 .landing-hero-bottom {
     display: flex;
     height: 100%;
-    border-radius: 24px;
-    background-color: #f7a1a1;
+    border-radius: 20px;
+    /* background-color: #f7a1a1; */
+    background-color: #ffb2ef;
+    padding: 24px;
+    align-items: center;
 }
 .landing-hero-live, .landing-hero-training, .landing-hero-placement{
     display: flex;
@@ -115,11 +118,20 @@
     align-items: center;
     gap: 1rem;
     width: 100%;
-    height: 100%;
-   padding: 24px;
-   border-radius: 16px;
-   
+    height: max-content;
+    border-right:1px solid #ea98db;
 }
+.landing-hero-live{
+    padding-right:24px ;
+}
+.landing-hero-training{
+    padding: 0px 24px;
+}
+.landing-hero-placement{
+    border-right:0;
+    padding-left: 24px;
+}
+
 .landing-hero-live img, .landing-hero-training img, .landing-hero-placement img{
     width: 60px;
     
@@ -127,12 +139,15 @@
 
 .landing-hero-live p, .landing-hero-training p, .landing-hero-placement p{
     font-size: 16px;
-    width: 80%;
+    width: 50%;
     font-family: 'Inter', sans-serif;
     font-weight: 500;
     line-height: 150%;
     color:#1c1623;
     text-align: center;
+}
+.landing-hero-placement p{
+    width: 100%;
 }
 .landing-hero-last{
     width: 100%;
@@ -140,8 +155,9 @@
     display: flex;
     flex-direction: column;
     gap:0.2rem;
-    border-radius: 24px;
-    background-color: #64FE89;
+    border-radius: 16px;
+    /* background-color: #64FE89; */
+    background-color: #93e8a7;
 }
 .landing-hero-last-heading p{
     font-size: 16px;
@@ -170,6 +186,9 @@
         padding-top: 100px;
         padding-bottom: 60px;
     }
+    .landing-hero-container {
+        width: 85%;
+    }
     .landing-hero-left{
         height: 100%;
     }
@@ -182,8 +201,6 @@
     .landing-hero-live, .landing-hero-training, .landing-hero-placement{
     padding: 12px;
     }
-}
-@media only screen and (max-width:900px){
     .landing-hero-container {
         flex-direction: column;
     }
@@ -193,7 +210,10 @@
     .landing-hero-live, .landing-hero-training, .landing-hero-placement {
         height: 150px;
     }
+
 }
+
+   
 @media only screen and (max-width:600px){
     .landing-hero-section {
         padding-top: 80px;
@@ -235,14 +255,27 @@
     .landing-hero-live, .landing-hero-training, .landing-hero-placement {
         flex-direction: row;
         height: min-content;
-        padding: 12px;
-        justify-content: space-around;
+        padding: 0;
+        justify-content: flex-start;
+        gap:2rem;
+        border-right: 0;
+        border-bottom: 1px solid #c48484;
+    }
+    .landing-hero-live{
+        padding-bottom: 24px;
+    }
+    .landing-hero-training{
+        padding:24px 0px ;
+    }
+    .landing-hero-placement{
+        padding-top: 24px;
+        border-bottom: 0;
     }
     .landing-hero-live p, .landing-hero-training p, .landing-hero-placement p{
         width: max-content;
     }
     .landing-hero-live img, .landing-hero-training img, .landing-hero-placement img{
-        width: 30px;
+        width: 40px;
         
     }
 }
@@ -348,6 +381,7 @@
 @media only screen and (max-width:1024px){
     .landing-learning{
         padding: 60px 0px;
+        padding-top: 30px;
     }
     .landing-learning-left h1{
         font-size: 32px;
@@ -467,7 +501,7 @@
 @media only screen and (max-width:1024px){
     .landing-explore{
         padding: 60px 0px;
-        padding-top: 20px;
+        padding-top: 30px;
     }
     .landing-explore-container{
         flex-direction: column;
@@ -528,7 +562,7 @@
     width: 40%;
     display: flex;
     flex-direction: column;
-    gap:2rem;
+    gap:1rem;
 }
 .landing-optimised-left h1 {
     font-size: 40px;
@@ -590,7 +624,8 @@
 
 @media only screen and (max-width:1024px){
     .landing-optimised{
-        padding: 40px 0px;
+        padding: 60px 0px;
+        padding-top: 30px;
     }
     .landing-optimised-container{
         flex-direction: column;
@@ -717,6 +752,7 @@
 @media only screen and (max-width:1024px){
     .landing-review{
         padding: 60px 0px;
+        padding-top: 30px;
     }
     .landing-review-container{
         flex-direction: column;
@@ -822,6 +858,10 @@
     border-top-left-radius:8px ;
     border-bottom-left-radius:8px ;
     font-size: 16px;
+    color:#1c1623;
+}
+.landing-newsletter-email::placeholder {
+    color:#3f3f3f;
 }
 .landing-newsletter-form input:focus {
     outline: none; /* Add this line to remove the focus border */
@@ -837,7 +877,7 @@
     border: 2px solid #1c1623;
     border-radius: 8px;
     color: #fcfefe;
-
+    margin-left:8px;
 }
 .landing-newsletter-form button:hover{
     background-color: inherit;
@@ -847,9 +887,12 @@
 @media only screen and (max-width:1024px){
     .landing-newsletter {
         padding: 60px 0px;
+        padding-top: 30px;
     }
+   
     .landing-newsletter-container{
         width: 85%;
+        padding: 50px 32px;
         flex-direction: column;
         align-items: center;
         gap:2.5rem;
@@ -872,10 +915,12 @@
     }
     .landing-newsletter-container {
         width: 85%;
-        padding: 24px 16px;
+        padding: 24px;
+        align-items: flex-start;
     }
     .landing-newsletter-heading h1 {
         font-size: 20px;
+        text-align: left;
     }
     .landing-newsletter-form form {
         padding: 4px 8px;
@@ -884,7 +929,14 @@
         height: 30px;
     }
     .landing-newsletter-form {
-        width: 90%;
+        width: 100%;
+    }
+    .landing-newsletter-form form {
+        padding: 2px 4px;
+    }
+    .landing-newsletter-form button{
+         padding: 4px 8px;
+         
     }
 }
 
@@ -957,6 +1009,7 @@
 @media only screen and (max-width:1024px){
     .landing-better{
         padding: 60px 0px;
+        padding-top: 30px;
     }
     .landing-better-container{
         flex-direction: column;
