--- a/client/src/components/course-page/course-landing-page/CourseLanding.css
+++ b/client/src/components/course-page/course-landing-page/CourseLanding.css
@@ -49,7 +49,7 @@
     padding:32px 24px;
     border-top-left-radius: 24px;
     border-top-right-radius: 24px;
-    background-color: #fffeca;
+    background-color: #fffdc3;
 }
 .course-landing-uiux-card-title{
     padding:32px 24px;
