--- a/client/src/components/landing-page/LandingPage.css
+++ b/client/src/components/landing-page/LandingPage.css
@@ -488,7 +488,7 @@
     background-color:#b9a2ff;
 }
 .landing-explore-dm{
-    background-color:#fbfaad;
+    background-color:#ecbb7a;
 }
 
 .landing-explore-ai h2, .landing-explore-uiux h2, .landing-explore-dm h2{
