--- a/client/src/components/common/footer/Footer.css
+++ b/client/src/components/common/footer/Footer.css
@@ -67,6 +67,7 @@
   .copyrights{
     display: flex;
     justify-content:flex-end;
+    align-items: center;
     row-gap: 4px;
     margin-bottom: 20px;
   }
