--- a/client/src/components/blog-page/blog-landing/BlogLanding.css
+++ b/client/src/components/blog-page/blog-landing/BlogLanding.css
@@ -11,7 +11,7 @@
 }
 .blog-landing-card{
     padding:24px 28px;
-    width: 33%;
+    width: 30%;
     display: flex;
     flex-direction: column;
     gap:1rem;
@@ -19,7 +19,7 @@
 .blog-landing-card-inner{
     display: flex;
     flex-direction: column;
-    gap:0.6rem;
+    gap:1rem;
 }
 .blog-landing-card-image{
     width: 100%;
@@ -41,7 +41,7 @@
     font-family: 'Inter', sans-serif;
     font-size: 14px;
     font-weight: 400;
-    color: #3f3f3f;
+    color: #1c1623;
 }
 .blog-landing-card-heading h1{
     font-family: 'Inter', sans-serif;
